--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>숫자를 맞춰 보세요 (1~100의 숫자)</h1>
+    <h1>숫자를 맞춰 보세요 (1~100)</h1>
     <div id="result-area">게임을 시작합니다</div>
     <div id="chance-info">남은 횟수:</div>
     <input type="number" id="user-input"/>
