--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 </head>
 <body>
     <h1>숫자를 맞춰 보세요 (1~100)</h1>
+    
+    
     <div id="result-area">게임을 시작합니다</div>
     <div id="chance-info">남은 횟수:</div>
     <input type="number" id="user-input"/>
     <button id="play-button">try!</button>
     <button id="reset-button">reset</button>
 
+    <div>
+    <p id="percent">현재 맞출확률:1%</p>
+    <p id="num-range">정답의 범위:1~100</p>
+    </div>
 
     <script src="main.js"></script>    
 </body>
